--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -4,7 +4,7 @@
         <div class="az-header-left">
           <a href="index.html" class="az-logo"><span></span> azia</a>
           <a href="#" id="azMenuShow" class="az-header-menu-icon d-lg-none"><span></span></a>
-          <a href="#" id="azContentBodyHide" class="az-header-arrow d-md-none"><i class="icon ion-md-arrow-back"></i></a>
+          <a href="#" id="azContentBodyHide" class="az-header-arrow d-md-none"><i class="fa fa-arrow-left"></i></a>
         </div><!-- az-header-left -->
         <div class="az-header-menu">
           <div class="az-header-menu-header">
