--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -144,7 +144,7 @@
             <a href="#" class="new"><i class="typcn typcn-bell"></i></a>
             <div class="dropdown-menu">
               <div class="az-dropdown-header mg-b-20 d-sm-none">
-                <a href="#" class="az-header-arrow"><i class="icon ion-md-arrow-back"></i></a>
+                <a href="#" class="az-header-arrow"><i class="fa fa-arrow-left"></i></a>
               </div>
               <h6 class="az-notification-title">Notifications</h6>
               <p class="az-notification-text">You have 2 unread notification</p>
@@ -185,7 +185,7 @@
             <a href="#" class="az-img-user"><img src="assets/assetsmobile/img/img1.jpg" alt=""></a>
             <div class="dropdown-menu">
               <div class="az-dropdown-header d-sm-none">
-                <a href="#" class="az-header-arrow"><i class="icon ion-md-arrow-back"></i></a>
+                <a href="#" class="az-header-arrow"><i class="fa fa-arrow-left"></i></a>
               </div>
               <div class="az-header-profile">
                 <div class="az-img-user">
