--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -2,17 +2,17 @@
     <div class="az-header">
       <div class="container">
         <div class="az-header-left">
-          <a href="index.html" class="az-logo"><span></span> azia</a>
+          <a href="index.html" class="az-logo"><span></span> My Dashboard</a>
           <a href="#" id="azMenuShow" class="az-header-menu-icon d-lg-none"><span></span></a>
           <a href="#" id="azContentBodyHide" class="az-header-arrow d-md-none"><i class="fa fa-arrow-left"></i></a>
         </div><!-- az-header-left -->
         <div class="az-header-menu">
           <div class="az-header-menu-header">
-            <a href="index.html" class="az-logo"><span></span> azia</a>
+            <a href="index.html" class="az-logo"><span></span> My Dashboard</a>
             <a href="#" class="close">&times;</a>
           </div><!-- az-header-menu-header -->
           <ul class="nav">
-            <li class="nav-item">
+   <!--         <li class="nav-item">
               <a href="#" class="nav-link with-sub"><i class="typcn typcn-chart-area-outline"></i> Dashboard</a>
               <div class="az-menu-sub">
                 <nav class="nav">
@@ -27,19 +27,19 @@
                   <a href="dashboard-nine.html" class="nav-link">Campaign Monitoring</a>
                   <a href="dashboard-ten.html" class="nav-link">Product Management</a>
                 </nav>
-              </div><!-- az-menu-sub -->
-            </li>
+              </div>
+            </li> -->
             <li class="nav-item active show">
-              <a href="#" class="nav-link with-sub"><i class="typcn typcn-folder"></i> Apps</a>
-              <nav class="az-menu-sub">
+              <a href="#" class="nav-link with-sub"><i class="typcn typcn-folder"></i> Orders</a>
+             <!--  <nav class="az-menu-sub">
                 <a href="app-mail.html" class="nav-link">Mailbox</a>
                 <a href="app-chat.html" class="nav-link">Chat</a>
                 <a href="app-calendar.html" class="nav-link">Calendar</a>
                 <a href="app-contacts.html" class="nav-link active">Contacts</a>
-              </nav>
+              </nav> -->
             </li>
             <li class="nav-item">
-              <a href="#" class="nav-link with-sub"><i class="typcn typcn-document"></i> Pages</a>
+              <a href="#" class="nav-link with-sub"><i class="typcn typcn-cog-outline"></i> Settings</a>
               <nav class="az-menu-sub">
                 <a href="page-profile.html" class="nav-link">Profile</a>
                 <a href="page-invoice.html" class="nav-link">Invoice</a>
@@ -48,7 +48,7 @@
                 <a href="page-404.html" class="nav-link">Page 404</a>
               </nav>
             </li>
-            <li class="nav-item">
+     <!--        <li class="nav-item">
               <a href="#" class="nav-link with-sub"><i class="typcn typcn-book"></i> Components</a>
               <div class="az-menu-sub az-menu-sub-mega">
                 <div class="container">
@@ -114,10 +114,10 @@
                       <a href="table-data.html" class="nav-link">Data Tables</a>
                     </nav>
                   </div>
-                </div><!-- container -->
+                </div>
               </div>
-            </li>
-            <li class="nav-item">
+            </li> -->
+         <!--    <li class="nav-item">
               <a href="#" class="nav-link with-sub"><i class="typcn typcn-tabs-outline"></i> Utilities</a>
               <nav class="az-menu-sub">
                 <a href="util-background.html" class="nav-link">Background</a>
@@ -132,14 +132,15 @@
                 <a href="util-width.html" class="nav-link">Width</a>
                 <a href="util-extras.html" class="nav-link">Extras</a>
               </nav>
-            </li>
+            </li> -->
           </ul>
         </div><!-- az-header-menu -->
         <div class="az-header-right">
-          <a href="#" class="az-header-search-link"><i class="fas fa-search"></i></a>
-          <div class="az-header-message">
+         <!--  <a href="#" class="az-header-search-link"><i class="fas fa-search"></i></a> -->
+         <!--  <div class="az-header-message">
             <a href="app-chat.html"><i class="typcn typcn-messages"></i></a>
-          </div><!-- az-header-message -->
+          </div> -->
+          <!-- az-header-message -->
           <div class="dropdown az-header-notification">
             <a href="#" class="new"><i class="typcn typcn-bell"></i></a>
             <div class="dropdown-menu">
