--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -2,13 +2,13 @@
     <div class="az-header">
       <div class="container">
         <div class="az-header-left">
-          <a href="index.html" class="az-logo"><span></span> My Dashboard</a>
+          <a href="index.html" class="az-logo"><span></span> MySite</a>
           <a href="#" id="azMenuShow" class="az-header-menu-icon d-lg-none"><span></span></a>
           <a href="#" id="azContentBodyHide" class="az-header-arrow d-md-none"><i class="fa fa-arrow-left"></i></a>
         </div><!-- az-header-left -->
         <div class="az-header-menu">
           <div class="az-header-menu-header">
-            <a href="index.html" class="az-logo"><span></span> My Dashboard</a>
+            <a href="index.html" class="az-logo"><span></span> MySite</a>
             <a href="#" class="close">&times;</a>
           </div><!-- az-header-menu-header -->
           <ul class="nav">
@@ -148,57 +148,29 @@
                 <a href="#" class="az-header-arrow"><i class="fa fa-arrow-left"></i></a>
               </div>
               <h6 class="az-notification-title">Notifications</h6>
-              <p class="az-notification-text">You have 2 unread notification</p>
-              <div class="az-notification-list">
-                <div class="media new">
-                  <div class="az-img-user"><img src="assets/assetsmobile/img/img2.jpg" alt=""></div>
-                  <div class="media-body">
-                    <p>Congratulate <strong>Socrates Itumay</strong> for work anniversaries</p>
-                    <span>Mar 15 12:32pm</span>
-                  </div><!-- media-body -->
-                </div><!-- media -->
-                <div class="media new">
-                  <div class="az-img-user online"><img src="assets/assetsmobile/img/img3.jpg" alt=""></div>
-                  <div class="media-body">
-                    <p><strong>Joyce Chua</strong> just created a new blog post</p>
-                    <span>Mar 13 04:16am</span>
-                  </div><!-- media-body -->
-                </div><!-- media -->
-                <div class="media">
-                  <div class="az-img-user"><img src="assets/assetsmobile/img/img4.jpg" alt=""></div>
-                  <div class="media-body">
-                    <p><strong>Althea Cabardo</strong> just created a new blog post</p>
-                    <span>Mar 13 02:56am</span>
-                  </div><!-- media-body -->
-                </div><!-- media -->
-                <div class="media">
-                  <div class="az-img-user"><img src="assets/assetsmobile/img/img5.jpg" alt=""></div>
-                  <div class="media-body">
-                    <p><strong>Adrian Monino</strong> added new comment on your photo</p>
-                    <span>Mar 12 10:40pm</span>
-                  </div><!-- media-body -->
-                </div><!-- media -->
-              </div><!-- az-notification-list -->
-              <div class="dropdown-footer"><a href="#">View All Notifications</a></div>
+              <p class="az-notification-text">You have 0 unread notification</p>
+          
+              <div class="dropdown-footer"><a href="#">
+That's all right</a></div>
             </div><!-- dropdown-menu -->
           </div><!-- az-header-notification -->
           <div class="dropdown az-profile-menu">
-            <a href="#" class="az-img-user"><img src="assets/assetsmobile/img/img1.jpg" alt=""></a>
+            <a href="#" class="az-img-user"><img src="assets/assetsmobile/img/service.png" alt=""></a>
             <div class="dropdown-menu">
               <div class="az-dropdown-header d-sm-none">
                 <a href="#" class="az-header-arrow"><i class="fa fa-arrow-left"></i></a>
               </div>
               <div class="az-header-profile">
                 <div class="az-img-user">
-                  <img src="assets/assetsmobile/img/img1.jpg" alt="">
+                  <img src="assets/assetsmobile/img/service.png" alt="">
                 </div><!-- az-img-user -->
-                <h6>Aziana Pechon</h6>
-                <span>Premium Member</span>
+                <h6>PenguinsCleaning</h6>
+                <!-- <span>MySite</span> -->
               </div><!-- az-header-profile -->
 
-              <a href="#" class="dropdown-item"><i class="typcn typcn-user-outline"></i> My Profile</a>
+            <!--   <a href="#" class="dropdown-item"><i class="typcn typcn-user-outline"></i> My Profile</a>
               <a href="#" class="dropdown-item"><i class="typcn typcn-edit"></i> Edit Profile</a>
-              <a href="#" class="dropdown-item"><i class="typcn typcn-time"></i> Activity Logs</a>
+              <a href="#" class="dropdown-item"><i class="typcn typcn-time"></i> Activity Logs</a> -->
               <a href="#" class="dropdown-item"><i class="typcn typcn-cog-outline"></i> Account Settings</a>
               <a href="page-signin.html" class="dropdown-item"><i class="typcn typcn-power-outline"></i> Sign Out</a>
             </div><!-- dropdown-menu -->
