--- a/src/app/components/orders/orders.component.html
+++ b/src/app/components/orders/orders.component.html
@@ -7,12 +7,12 @@
             <!-- <span>Apps &amp; Pages</span> -->
             <!-- <span>Contacts</span> -->
           </div>
-          <h2 class="az-content-title tx-24 mg-b-30">My Orders</h2>
+          <h2 class="az-content-title tx-24 mg-b-30">My quotes</h2>
 
-          <nav class="nav az-nav-line az-nav-line-chat">
+          <!-- <nav class="nav az-nav-line az-nav-line-chat">
             <a href="#" data-toggle="tab" class="nav-link active">Appointments</a>
             <a  href="#" (click)="quotes()"   data-toggle="tab" class="nav-link" >Quotes</a>
-          </nav>
+          </nav> -->
 
           <div id="azContactList" class="az-contacts-list" >
             <div class="az-contact-label">{{first}}</div>
@@ -84,10 +84,10 @@
                </nav>
               </div>
             </div>
-            <div class="az-contact-action">
+         <!--    <div class="az-contact-action">
               <a href="#"><i class="typcn typcn-flash-outline"></i> Status update</a>
               <a href="#"><i class="typcn typcn-trash"></i> Delete </a>
-            </div>
+            </div> -->
 
           </div>
           <div class="az-contact-info-body">
