--- a/src/app/components/topbar/topbar.component.html
+++ b/src/app/components/topbar/topbar.component.html
@@ -30,7 +30,7 @@
               </div>
             </li> -->
             <li class="nav-item active show">
-              <a href="#" class="nav-link with-sub"><i class="typcn typcn-folder"></i> Orders</a>
+              <a href="#" class="nav-link "><i class="typcn typcn-bookmark"></i> Quotes</a>
              <!--  <nav class="az-menu-sub">
                 <a href="app-mail.html" class="nav-link">Mailbox</a>
                 <a href="app-chat.html" class="nav-link">Chat</a>
@@ -38,7 +38,12 @@
                 <a href="app-contacts.html" class="nav-link active">Contacts</a>
               </nav> -->
             </li>
-            <li class="nav-item">
+          <!--   <li class="nav-item   ">
+              <a routerLink="calendar" class="nav-link "><i class="typcn typcn-calendar"></i> Calendar</a>
+           
+           
+            </li> -->
+          <!--   <li class="nav-item">
               <a href="#" class="nav-link with-sub"><i class="typcn typcn-cog-outline"></i> Settings</a>
               <nav class="az-menu-sub">
                 <a href="page-profile.html" class="nav-link">Profile</a>
@@ -47,7 +52,7 @@
                 <a href="page-signup.html" class="nav-link">Sign Up</a>
                 <a href="page-404.html" class="nav-link">Page 404</a>
               </nav>
-            </li>
+            </li> -->
      <!--        <li class="nav-item">
               <a href="#" class="nav-link with-sub"><i class="typcn typcn-book"></i> Components</a>
               <div class="az-menu-sub az-menu-sub-mega">
